--- a/frontend/nginx-1.14.2/html/origin_demo/views/quota.html
+++ b/frontend/nginx-1.14.2/html/origin_demo/views/quota.html
@@ -10,6 +10,9 @@
     <script src="http://api.map.baidu.com/api?v=2.0&ak=LelFSt6BfykGf8m3PB5zr8LaXAG2cMg6"></script>
     <script src="../scripts/common.js"></script>
     <script src="../scripts/quota.js"></script>
+
+   
+    <script src="../scripts/Plugin/echarts-gl.min.js"></script>
 </head>
 <body>
 <!--顶部-->
@@ -92,42 +95,42 @@
     <div class="div_any">
         <div class="left div_any01">
             <div class="div_any_child">
-                <div class="div_any_title"><img src="../images/title_5.png">各医院门诊人次(人)</div>
+                <div class="div_any_title"><img src="../images/title_5.png">直接展示最受欢迎的电影类别 写字</div>
                 <p id="histogramChart1" class="p_chart"></p>
             </div>
             <div class="div_any_child">
-                <div class="div_any_title"><img src="../images/title_6.png">各医院住院人次(人)</div>
-                <p id="histogramChart2" class="p_chart"></p>
+                <div class="div_any_title"><img src="../images/title_6.png">图5 年龄与类别关系</div>
+                <p id="table5" class="p_chart"></p>
             </div>
         </div>
         <div class="left div_any01">
             <div class="div_any_child">
-                <div class="div_any_title"><img src="../images/title_7.png">各医院医疗费用(元)</div>
-                <p id="lineChart1" class="p_chart"></p>
+                <div class="div_any_title"><img src="../images/title_7.png">图9 三维电影票房与类型的关系</div>
+                <p id="table9" class="p_chart"></p>
             </div>
             <div class="div_any_child">
-                <div class="div_any_title"><img src="../images/title_8.png">各医院体检人次(人)</div>
-                <p id="lineChart2" class="p_chart"></p>
+                <div class="div_any_title"><img src="../images/title_8.png">图6 年份、类别与票房的关系</div>
+                <p id="table6" class="p_chart"></p>
             </div>
         </div>
         <div class="left div_any01">
             <div class="div_any_child">
-                <div class="div_any_title"><img src="../images/title_9.png">药占比(%)</div>
+                <div class="div_any_title"><img src="../images/title_9.png">与左侧合并</div>
                 <p id="histogramChart3" class="p_chart"></p>
             </div>
             <div class="div_any_child">
-                <div class="div_any_title"><img src="../images/title_10.png">平均住院天数(天)</div>
+                <div class="div_any_title"><img src="../images/title_10.png">与左侧合并</div>
                 <p id="histogramChart4" class="p_chart"></p>
             </div>
         </div>
         <div class="left div_any01">
             <div class="div_any_child">
-                <div class="div_any_title"><img src="../images/title_11.png">手术工作量(台)</div>
-                <p id="pieChart1" class="p_chart"></p>
+                <div class="div_any_title"><img src="../images/title_11.png">图4 男女与类别关系</div>
+                <p id="table4" class="p_chart"></p>
             </div>
             <div class="div_any_child">
-                <div class="div_any_title"><img src="../images/title_12.png">床位数量分布(床)</div>
-                <p id="pieChart2" class="p_chart"></p>
+                <div class="div_any_title"><img src="../images/title_12.png">图7 学历与类型关系</div>
+                <p id="table7" class="p_chart"></p>
             </div>
         </div>
     </div>
